[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/table.gd" type="Script" id=1]
[ext_resource path="res://scenes/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/boards/joker_4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/JokerBoard.jpg" type="Texture" id=4]
[ext_resource path="res://assets/sprites/background.jpg" type="Texture" id=5]
[ext_resource path="res://assets/sprites/boards/joker_6.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/boards/joker_8.png" type="Texture" id=8]

[node name="Table" type="Node2D"]
script = ExtResource( 1 )

[node name="TableBackground" type="CanvasLayer" parent="."]
layer = -10

[node name="Sprite" type="Sprite" parent="TableBackground"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Boards" type="Node" parent="."]

[node name="JokerBoard4" type="Sprite" parent="Boards"]
z_index = -1000
texture = ExtResource( 3 )

[node name="JokerBoard6" type="Sprite" parent="Boards"]
position = Vector2( -10.5, -1.875 )
scale = Vector2( 1.0283, 1.02581 )
z_index = -1000
texture = ExtResource( 6 )

[node name="JokerBoard8" type="Sprite" parent="Boards"]
visible = false
position = Vector2( -15.5, -13.75 )
scale = Vector2( 1.03452, 1.00167 )
z_index = -1000
texture = ExtResource( 8 )

[node name="Pieces" type="Node2D" parent="."]

[node name="Controls" type="Node" parent="."]

[node name="Camera" parent="Controls" instance=ExtResource( 2 )]

[node name="StartMenu" type="CanvasLayer" parent="Controls"]
layer = 2

[node name="StartMenuPanel" type="Panel" parent="Controls/StartMenu"]
modulate = Color( 1, 1, 1, 0.752941 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/StartMenu"]
margin_left = 55.0
margin_top = 57.0
margin_right = 95.0
margin_bottom = 97.0

[node name="ServerName" type="TextEdit" parent="Controls/StartMenu/VBoxContainer"]
margin_right = 40.0

[node name="StartMenuVbox" type="VBoxContainer" parent="Controls/StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -106.0
margin_right = 57.5
margin_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="Controls/StartMenu/StartMenuVbox"]
margin_top = 27.0
margin_right = 115.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 50 )
text = "Start New Game"

[node name="ReturnToGameButton" type="Button" parent="Controls/StartMenu/StartMenuVbox"]
margin_top = 81.0
margin_right = 115.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 50 )
text = "Return To Game"

[node name="QuitButton" type="Button" parent="Controls/StartMenu/StartMenuVbox"]
margin_top = 135.0
margin_right = 115.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 50 )
text = "Quit"

[node name="_debug" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="_debug"]
visible = false
position = Vector2( -103, -9 )
scale = Vector2( 0.756818, 0.740922 )
z_index = -10
texture = ExtResource( 4 )

[connection signal="pressed" from="Controls/StartMenu/StartMenuVbox/StartGameButton" to="." method="_on_start_menu_button_pressed" binds= [ "start_game" ]]
[connection signal="pressed" from="Controls/StartMenu/StartMenuVbox/ReturnToGameButton" to="." method="_on_start_menu_button_pressed" binds= [ "return_to_game" ]]
[connection signal="pressed" from="Controls/StartMenu/StartMenuVbox/QuitButton" to="." method="_on_start_menu_button_pressed" binds= [ "quit" ]]

[editable path="Controls/Camera"]
